fix(mobile): dont show side section on mobile

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -660,6 +660,13 @@ body {
 	}
 }
 
+@include media-breakpoint-down(sm) {
+	// dont show in mobile
+	.layout-side-section {
+		min-width: 0px;
+	}
+}
+
 .overlay-sidebar {
 	ul.dropdown-menu {
 		li {
